--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -7,11 +7,11 @@
   width: 100%;
   height: $navbar-height;
   z-index: 100;
-  background: rgba(160, 178, 239, 0.24s);
+  background: rgba(160, 178, 239, 0.24);
 }
 
 nav.scrolled {
-  background: rgba(160, 178, 239, 0.24s);
+  background: rgba(160, 178, 239, 0.24);
 }
 
 .nav__logo {
